# tablut-client

./: .gitmodules  CMakeLists.txt  README
cmake/compilers/: clang.cmake  gcc.cmake  mingw.cmake  msvc.cmake
cmake/modules/: CheckCompiler.cmake  FindCEF.cmake  FindOpenGL.cmake
data/pawns/: king.mtl  muscovite.mtl  swedish.mtl
datasrc/: pawn_swedish.mtl
dep/: CMakeLists.txt
dep/stb/: CMakeLists.txt  stb_image.h  stb_truetype.h
src/: CMakeLists.txt  SDL.cpp  SDL.hpp  array2d.h  board.cpp  board.hpp  camera.cpp  camera.hpp  font.c  font.cpp  font.def.h  font.h  font.hpp  game.cpp  game.hpp  main.c  main.cpp  network_manager.cpp  network_manager.hpp  pawn_model.cpp  pawn_model.hpp  shared.h  tafl.cpp  tafl.hpp  texture.c  texture.cpp  texture.def.h  texture.h  texture.hpp  tiny_obj_loader.cpp  utils.hpp  vec3.hpp  window.cpp  window.hpp
